--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.4.1",
+    "mongoose-sequence": "^5.3.1",
     "pm2": "^5.2.0"
   }
 }
