--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "nodemon server.js",
+    "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,7 @@
     "express": "^4.18.1",
     "mongoose": "^6.4.1",
     "mongoose-sequence": "^5.3.1",
+    "nodemon": "^2.0.18",
     "pm2": "^5.2.0"
   }
 }
