--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^6.4.1",
     "mongoose-sequence": "^5.3.1",
     "nodemon": "^2.0.18",
-    "pm2": "^5.2.0"
+    "pm2": "^5.2.0",
+    "vite": "^2.9.9"
   }
 }
